# swot

./: Cargo.toml  README.md  build.rs
ftdi-vcp-rs/: Cargo.toml
ftdi-vcp-rs/src/: lib.rs  mpsse.rs
ftdi-vcp-sys/: Cargo.toml  build.rs
ftdi-vcp-sys/lib/vcp-2.12.28/: ftd2xx.h
ftdi-vcp-sys/src/: lib.rs
src/: flash.rs  getopt.h  main.rs  mpsse.rs  mpsse_glue.rs  unistd.h
