[package]
name = "ftdi-prog"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ftdi-vcp-rs = { path = "ftdi-vcp-rs" }
clap = "*"

[build-dependencies]
# cc = { version = "1.0", features = ["parallel"] }
